# LiteOS

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.ps1
include/: include.h
project/app/: main.c
project/os/: event.c  event.h  os.c  os.h  os_config.h  os_type.h  task.c  task.h  timer.c  timer.h
scripts/kconfig/: Kconfig  kconfig.py
src/: main.c
